Finish styling menus and get spacing correct

--- a/public/css/folder.css
+++ b/public/css/folder.css
@@ -33,9 +33,11 @@ div#items {
     gap: 30px;
 }
 
-div#profile {
+div#profile,
+div#actions {
     display: flex;
     flex-direction: column;
+    position: relative;
 }
 
 div#profile-header {
@@ -50,13 +52,13 @@ div#actions-header {
     display: flex;
 }
 
-div#actions {
-    display: flex;
-}
-
 div.menu {
     display: none;
+    top: 20px;
     flex-direction: column;
+    position: absolute;
+    background: white;
+    border: solid black;
 }
 
 div#actions div.menu svg {
@@ -72,4 +74,16 @@ div#folder-form {
     display: flex;
     align-items: center;
     gap: 10px;
+    margin: 10px;
+}
+
+div#profile div.menu {
+    width: 75px;
+    right: 10px;
+}
+
+div#profile div.menu button {
+    border: none;
+    background-color: white;
+    margin: 10px;
 }
